--- a/webserver/flaskr/templates/base.html
+++ b/webserver/flaskr/templates/base.html
@@ -1,21 +1,37 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Smart India Hackathon</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<title>{% block title %}{% endblock %} - Smart India Hackathon 2020</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
 <nav>
-  <h1></h1>
-  <ul>
-    <li><a href="{{ url_for('dataset.index') }}">Datasets</a></li>
-  </ul>
+  <div class="nav-wrapper">
+    <a href="#" class="brand-logo">Smart India Hackathon 2020</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="#">Predict</a></li>
+      <li><a href="{{ url_for('dataset.index') }}">Datasets</a></li>
+    </ul>
+  </div>
 </nav>
 
 <section class="content">
   <header>
-    {% block header %}{% endblock %}
+    <h1 class="center">{% block header %}{% endblock %}</h1>
   </header>
 
   {% for message in get_flashed_messages() %}
     <div class="flash">{{ message }}</div>
   {% endfor %}
 
-  {% block content %}{% endblock %}
+  <div class="row">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{% block card_title %}{% endblock %}</span>
+        {% block content %}{% endblock %}
+      </div>
+      <div class="card-action">
+        {% block card_links %}{% endblock %}
+      </div>
+    </div>
+  </div>
 </section>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
