--- a/SIH/app/src/main/res/layout/activity_show_image.xml
+++ b/SIH/app/src/main/res/layout/activity_show_image.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:orientation="vertical"
+        android:padding="10dp"
         tools:context=".ShowImage">
 
         <TextView
@@ -57,8 +58,8 @@
 
         <com.github.chrisbanes.photoview.PhotoView
             android:id="@+id/graph"
-            android:layout_width="400dp"
-            android:layout_height="250dp"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="30dp"
             android:src="@drawable/graph"
@@ -76,6 +77,7 @@
         <!--        android:src="@drawable/test"/>-->
 
         <TextView
+            android:id="@+id/inferenceText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,8 +88,29 @@
             android:textAllCaps="true"
             android:textColor="#000000"
             android:textSize="24sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold"/>
+        <LinearLayout
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/inferenceText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="8dpr"
+            android:orientation="vertical"
+            android:padding="8dp">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
