--- a/SIH/app/src/main/res/layout/activity_main.xml
+++ b/SIH/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         <ImageView
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:src="@drawable/sih_logo"
+            android:src="@drawable/splashscreen"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
