--- a/SIH/app/src/main/res/layout/activity_show_image.xml
+++ b/SIH/app/src/main/res/layout/activity_show_image.xml
@@ -33,11 +33,11 @@
             android:layout_height="300dp"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
+            app:auto_cycle="true"
+            app:indicator_visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:auto_cycle="true"
-            app:indicator_visibility="invisible"
             app:pager_animation="FlipHorizontal"
             app:pager_animation_span="1100" />
 
@@ -58,83 +58,137 @@
         <com.github.chrisbanes.photoview.PhotoView
             android:id="@+id/graph"
             android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="30dp"
             android:src="@drawable/graph"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/graphText" />
-        <!--    <com.github.chrisbanes.photoview.PhotoView-->
-        <!--        android:layout_width="wrap_content"-->
-        <!--        android:layout_height="wrap_content"-->
-        <!--        app:layout_constraintLeft_toRightOf="parent"-->
-        <!--        app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--        android:layout_margin="20dp"-->
-        <!--        android:padding="20dp"-->
-        <!--        android:src="@drawable/test"/>-->
 
         <TextView
             android:id="@+id/inferenceText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/graph"
-            android:text="INFERENCE"
             android:layout_marginTop="20dp"
+            android:text="INFERENCE"
             android:textAllCaps="true"
             android:textColor="#000000"
             android:textSize="24sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/graph" />
 
-<!--        <ImageView-->
-<!--            android:id="@+id/iv"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/graph"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/inferenceText">
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:gravity="center"-->
-<!--            android:orientation="vertical">-->
-<!--&lt;!&ndash;            android:layout_margin="@dimen/margin_normal"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:background="@drawable/blue_rectangle_border"&ndash;&gt;-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:weightSum="3">
 
-<!--`-->
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:padding="4dp"-->
-<!--                android:text="Harvest Time"-->
-<!-- />-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+                    android:text="Sowing Time:"
+                    android:textColor="#000000"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/tv_forwarded_by_display"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:padding="4dp"-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+                    android:text="January 15 2018" />
 
-<!--                android:text="gsgsdg"/>-->
-<!--&lt;!&ndash;                android:layout_margin="@dimen/margin_large"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:fontFamily="@font/lato_regular"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:gravity="center"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:text="@string/infrastructure_booking_title"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:textColor="@color/black"&ndash;&gt;-->
-<!--&lt;!&ndash;                android:textSize="@dimen/text_size_larger"&ndash;&gt;-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+                    android:text="October 15 2018" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:weightSum="3">
+
+                <TextView
+                    android:layout_width="wrap_content"
+
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+                    android:text="Harvest Time:"
+                    android:textColor="#000000"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+
+                    android:text="August 30 2018" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+                    android:text="July 30 2017" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:weightSum="2">
+
+                <TextView
+                    android:layout_width="wrap_content"
+
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+                    android:text="Number of harvests"
+                    android:textColor="#000000"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:padding="4dp"
+
+                    android:text="2" />
 
 
 
-<!--        </LinearLayout>-->
+            </LinearLayout>
 
 
+        </LinearLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
